manifests/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  template:
    spec:
      serviceAccountName: backstage
      containers:
        - name: backstage   
          command: ["node", "packages/backend", "--config", "app-config.yaml", "--config", "config/app-config.yaml"]
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
